# strips-haskell

./: .travis.yml  LICENSE  README.md  strips.cabal
examples/blocks-world/: blocks-world.cabal  stack.yaml
examples/blocks-world/src/: Main.hs
src/Algorithms/: Strips.hs
src/Algorithms/Strips/: Internal.hs
test/: Spec.hs
