name:                blocks-world
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/y-kamiya/strips/examples/blocks-world
license:             BSD3
license-file:        LICENSE
author:              Yuji Kamiya
maintainer:          y.kamiya0@gmail.com
copyright:           2016 Yuji Kamiya
category:            Sample
build-type:          Simple
cabal-version:       >=1.10

executable blocks-world
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 5
                     , strips
